Fix buggy scrolling on mobile

--- a/src/components/Root.css
+++ b/src/components/Root.css
@@ -33,3 +33,17 @@ body {
   margin-bottom: 0;
   bottom: 0;
 }
+
+html {
+  overflow-x: hidden !important;
+  max-width: 100% !important;
+  width: 100% !important;
+}
+
+body {
+  max-width: 100% !important;
+  width: 100% !important;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
